@@ -1,5 +1,5 @@
 # You can install this project with curl -L http://cpanmin.us | perl - https://github.com/jhthorsen/openapi-client/archive/master.tar.gz
-requires 'Mojolicious::Plugin::OpenAPI' => '2.00';
-requires 'JSON::Validator'              => '2.12';
+requires 'Mojolicious::Plugin::OpenAPI' => '2.14';
+requires 'JSON::Validator'              => '3.09';
 
 test_requires "Test::More" => "0.88";
