@@ -2,6 +2,7 @@ Revision history for perl distribution OpenAPI-Client
 
 0.23 Not Released
  - Add documentation for option --information|-I
+ - Fix deprecation warning for JSON::Validator->coerce(1) #17
  - Fix printing YAML::XS::Boolean as "false" and "true" in dumped
    documentation
  - Printed documentation has $ref resolved
